--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect": "^3.7.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "install": "^0.13.0",
     "js": "^0.1.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
